# BlueCast

./: .flake8  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .readthedocs.yaml  Advanced usage.md  Basic usage.md  Customizing configurations and objects.md  EDA.md  EDA_PLOTLY_MIGRATION_SUMMARY.md  Experiment tracking.md  LICENSE  Model explainability (XAI).md  README.md  Uncertainty quantification.md  optuna_database_backend_example.md  pyproject.toml  setup.cfg  test_classification_dashboard.py  test_dashboard_enhanced.py  test_regression_dashboard.py
.github/workflows/: codecov-actiions.yaml  workflow.yaml
bluecast/: Installation.md  Monitoring.md
bluecast/blueprints/: cast.py  cast_cv.py  cast_cv_ensemble.py  cast_cv_regression.py  cast_regression.py  custom_model_recipes.py  orchestration.py  preprocessing_recipes.py  welcome.py
bluecast/config/: base_classes.py  config_validations.py  training_config.py
bluecast/conformal_prediction/: base_classes.py  conformal_prediction.py  conformal_prediction_regression.py  effectiveness_nonconformity_measures.py  evaluation.py  nonconformity_measures.py  nonconformity_measures_regression.py
bluecast/eda/: analyse.py  data_leakage_checks.py  data_quality_checks.py
bluecast/evaluation/: base_classes.py  error_analysis.py  error_analysis_regression.py  eval_metrics.py  shap_values.py
bluecast/experimentation/: tracking.py
bluecast/general_utils/: general_utils.py
bluecast/ml_modelling/: base_classes.py  catboost.py  catboost_regression.py  parameter_tuning_utils.py  xgboost.py  xgboost_regression.py  xgboost_regressor.py
bluecast/monitoring/: base_classes.py  data_monitoring.py
bluecast/preprocessing/: category_encoder_orchestration.py  custom.py  datetime_features.py  encode_target_labels.py  feature_creation.py  feature_selection.py  feature_types.py  general_utils.py  infrequent_categories.py  nulls_and_infs.py  onehot_encoding.py  remove_collinearity.py  schema_checks.py  target_encoding.py  train_test_split.py
bluecast/tests/: test_analyse.py  test_base_classes.py  test_cast.py  test_cast_binary_conformal_prediction.py  test_cast_cv.py  test_cast_cv_binary_conformal_prediction.py  test_cast_cv_multiclass.py  test_cast_cv_multiclass_conformal_prediction.py  test_cast_cv_regression.py  test_cast_regression.py  test_catboost.py  test_catboost_regression.py  test_category_encoder_orchestrator.py  test_check_gpu_support.py  test_config_validations.py  test_conformal_prediction.py  test_conformal_prediction_evaluation.py  test_conformal_prediction_regression.py  test_custom_model_recipes.py  test_custom_processing_base_class.py  test_data_leakage_checks.py  test_data_monitoring.py  test_data_quality_checks.py  test_datetime_features.py  test_effectiveness_nonconformity_measures.py  test_encode_target_labels.py  test_error_analysis.py  test_error_analysis_base_classes.py  test_error_analysis_regression.py  test_eval_metrics.py  test_experiment_tracker.py  test_feature_creation.py  test_feature_selection.py  test_feature_type_detector.py  test_fine_tune.py  test_get_params_based_on_device.py  test_infrequent_categories.py  test_load_for_production.py  test_nonconformity_measures.py  test_nonconformity_measures_regression.py  (+16 more)
bluecast/tests/make_data/: create_data.py
blueprints/: cast.py
config/: training_config.py
docs/: conf.py  index.rst  rtd_requirements.txt
docs/source/: Basic usage.md  Customize training settings.md  Customizing configurations and objects.md  EDA.md  Error analysis.md  Experiment tracking.md  Feature engineering.md  Installation.md  Model explainability (XAI).md  Monitoring.md  Uncertainty quantification.md  conf.py  index.md
evaluation/: eval_metrics.py  shap_values.py
examples/: eda_dashboard_example.py
kaggle_competition_code_repository/: kaggle_automl_competition_august_2024.py
ml_modelling/: base_classes.py  xgboost.py
notebooks/: Automl school churn example pt 1 - EDA.ipynb  Automl school churn example pt 2 - cluster analysis.ipynb  Automl school churn example pt 3 - Creating a baseline model.ipynb  Automl school churn example pt 3 - Using the BlueCast with Xgboost cat handling.ipynb  Automl school churn example pt 3 - Using the BlueCast with custom CatBoost model.ipynb
preprocessing/: datetime_features.py  encode_target_labels.py  general_utils.py  nulls_and_infs.py  target_encoding.py  train_test_split.py
tests/: test_cast.py  test_check_gpu_support.py  test_datetime_features.py  test_encode_target_labels.py  test_feature_type_detector.py  test_nulls_and_infs.py  test_shap_explanations.py  test_target_encoding_binary.py  test_target_encoding_multiclass.py  test_train_test_split.py
tests/make_data/: create_data.py
