[tool.poetry]
name = "bluecast"
version = "2.0.0"
description = "A lightweight and fast automl framework"
authors = ["Thomas Meißner <meissnercorporation@gmx.de>"]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/ThomasMeissnerDS/BlueCast"
repository = "https://github.com/ThomasMeissnerDS/BlueCast"
readme = "README.md"
packages = [
    { include = "bluecast" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"# lower not possible: https://github.com/python-poetry/poetry/issues/5628
catboost = "^1.2.0"
category_encoders = "^2.3.0"
dill = "^0.3.3"
# fastparquet = ">= 2023.1.0"
matplotlib = ">=3.1.3" # pinned due to cannot import _png error
numpy = "==2.0.0"
optuna = ">=2.8.0"
optuna-integration = ">=3.0"
pandas = ">=1.1.5"
plotly = ">=6.0.0"
dash = ">=3.0.0"
jinja2 = ">=3.1.6"
requests = ">=2.32.4"
polars = ">= 0.20.0, != 1.7.0"
pyarrow = ">=10.0.0"  # former: "<0.17.0"
scipy = ">=1.14.0"
seaborn = ">=0.10.0"
scikit-learn = ">=1.6.0"
shap = ">=0.47.0"
s3fs = ">=2022.1.0"
xgboost = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
recommonmark = ">=0.7.1"
jupyter-server = "^2.0.0"
jupyter-core = ">=5.0.0"
ipython = ">=8.0.0"
ipywidgets = ">=8.0.0"
myst-parser = ">=2.0.0"
notebook = ">=7.2.0"
nbclient = ">=0.8.0"
pre-commit = "^3.0.0"
pytest = "^7.0.0"
pytest-mock = ">=3.12.0"
setuptools = ">=68.0.0"
twine = ">=4.0.0"
wheel = ">=0.40.0"
sphinx = ">=7.0.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.extras]
jupyter = ["ipython", "jupyter_core", "notebook"]
full = ["ipython", "jupyter_core", "notebook"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
